--- a/Aoc2023.Runner/Aoc2023.Runner.csproj
+++ b/Aoc2023.Runner/Aoc2023.Runner.csproj
@@ -22,6 +22,9 @@
         <None Update="Inputs\Day3.txt">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="Inputs\Day4.txt">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
