--- a/Aoc2023.Runner/Aoc2023.Runner.csproj
+++ b/Aoc2023.Runner/Aoc2023.Runner.csproj
@@ -25,6 +25,9 @@
         <None Update="Inputs\Day4.txt">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="Inputs\Day5.txt">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
