--- a/Aoc2023.Runner/Aoc2023.Runner.csproj
+++ b/Aoc2023.Runner/Aoc2023.Runner.csproj
@@ -34,6 +34,9 @@
         <None Update="Inputs\Day7.txt">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="Inputs\Day8.txt">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
