--- a/Aoc2023.Runner/Aoc2023.Runner.csproj
+++ b/Aoc2023.Runner/Aoc2023.Runner.csproj
@@ -43,6 +43,9 @@
         <None Update="Inputs\Day10.txt">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="Inputs\Day11.txt">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
